@@ -1,6 +1,5 @@
 package uk.gov.hmcts.cmc.claimstore.services.notifications;
 
-import com.google.common.collect.ImmutableMap;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -64,11 +63,11 @@ public class SettlementAgreementNotificationService {
     }
 
     public void notifyClaimant(Claim claim) {
-        Map<String, String> parameters = ImmutableMap.of(
+        Map<String, String> parameters = Map.of(
             CLAIMANT_NAME, claim.getClaimData().getClaimant().getName(),
             FRONTEND_BASE_URL, notificationsProperties.getFrontendBaseUrl(),
             CLAIM_REFERENCE_NUMBER, claim.getReferenceNumber());
-        
+
         sendNotificationEmail(
             claim.getSubmitterEmail(),
             notificationsProperties.getTemplates().getEmail().getClaimantSignedSettlementAgreementToClaimant(),
